# loadpath-meridian

./: .gitignore  README.md
apps/platform/: .dockerignore  .env.production.example  Dockerfile
apps/platform/app/Models/: Project.php  Scenario.php
apps/platform/bootstrap/: app.php
apps/platform/config/: cors.php
apps/platform/database/migrations/: 2026_06_04_000001_create_projects_table.php  2026_06_04_000002_create_scenarios_table.php
apps/platform/database/seeders/: DatabaseSeeder.php
apps/platform/routes/: api.php
apps/platform/tests/Feature/: PlatformApiTest.php
apps/simulation/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
apps/simulation/src/loadpath_meridian_simulation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/simulation/src/meridian_simulation/: __init__.py  app.py  assistant.py  catalog.py  comparison.py  config.py  connectors.py  data_store.py  database.py  engine_adapters.py  engine_runner.py  job_store.py  observability.py  operations.py  osemosys_model.py  report_package.py  results.py  routes.py  tasks.py  wsgi.py
apps/simulation/tests/: test_api.py  test_assistant.py  test_comparison.py  test_connectors.py  test_engine_adapters.py  test_job_store.py  test_osemosys_model.py
apps/web/: .env.example  index.html  package-lock.json  package.json
apps/web/src/: App.css  App.tsx  api.ts  index.css
apps/web/src/lib/: format.ts
apps/web/src/pages/: DataSourcesPage.tsx  NewProjectPage.tsx  NewScenarioPage.tsx  OperationsPage.tsx  ProjectDetailPage.tsx  ProjectsPage.tsx  ReportsPage.tsx  (+3 more)
docs/: ARCHITECTURE.md  DEPLOYMENT.md  PHASES.md
infra/: docker-compose.yml
(+1 files in other folders)
